--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <img src="模特3.jpg" style="width:100%"/>
 <img src="模特1.jpg" style="width:100%"/>
 <img src="模特2.jpg" style="width:100%"/>
-<img src="联系我们.jpg" style="width:100%"/>
 <img src="实体店.jpg" style="width:100%"/>
+<img src="女生.jpg" style="width:100%"/>
+<img src="微信.png" style="width:50%;float:left;">
+<img src="淘宝店.png" style="width:50%;float:right;">
+</tr></table><img src="联系我们3.jpg" style="width:100%"/>
 </body>
 </html>
