--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
 <head>
+<div id="shareImage" style="display: none;">
+   	<img src="logo.jpg" />
+</div>
 <title>罗曼罗兰皮具</title>
 </head>
 <body>
-<img src="logo.jpg" style="visibility:hidden;height:0;width:0;" />
 <img src="商标.jpg" style="width:100%"/>
 <img src="女生.jpg" style="width:100%"/>
 <img src="企业介绍.jpg" style="width:100%"/>
