--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>罗曼罗兰皮具</title>
 </head>
 <body>
+test
 <img src="商标.jpg" style="width:100%"/>
 <img src="女生.jpg" style="width:100%"/>
 <img src="企业介绍.jpg" style="width:100%"/>
