--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <html>
 <head>
-<div id="shareImage" style="display: none;">
-   	<img src="logo.jpg" />
-</div>
 <title>罗曼罗兰皮具</title>
 </head>
 <body>
-test
+<img src="实体店.jpg" width="0" height="0"/>
+sdfsdf
 <img src="商标.jpg" style="width:100%"/>
 <img src="女生.jpg" style="width:100%"/>
 <img src="企业介绍.jpg" style="width:100%"/>
