--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
+<link rel="icon" href="商标.jpg" type="image/x-icon">
+<link rel="shortcut icon" href="商标.jpg" type="image/x-icon">
 <title>罗曼罗兰皮具</title>
 </head>
 <body>
-<img src="实体店.jpg" width="0" height="0"/>
-sdfsdf
+1
 <img src="商标.jpg" style="width:100%"/>
 <img src="女生.jpg" style="width:100%"/>
 <img src="企业介绍.jpg" style="width:100%"/>
